css/style.css
/* ... */
@font-face {
  font-family: 'Rawline';
  src: url('fonts/rawline-600.ttf') format('truetype');
  font-weight: 600;
  font-style: normal;
}

@font-face {
  font-family: 'Rawline';
  src: url('fonts/rawline-600i.ttf') format('truetype');
  font-weight: 600;
  font-style: italic;
}
@font-face {
  font-family: 'Rawline';
  src: url('fonts/rawline-700.ttf') format('truetype');
  font-weight: 700;
  font-style: normal;
}

@font-face {
  font-family: 'Rawline';
  src: url('fonts/rawline-700i.ttf') format('truetype');
  font-weight: 700;
  font-style: italic;
}

@font-face {
  font-family: 'Rawline';
  src: url('fonts/rawline-800.ttf') format('truetype');
  font-weight: 800;
  font-style: normal;
}

@font-face {
  font-family: 'Rawline';
  src: url('fonts/rawline-800i.ttf') format('truetype');
  font-weight: 800;
  font-style: italic;
}


@font-face {
  font-family: 'Rawline';
  src: url('fonts/rawline-900.ttf') format('truetype');
  font-weight: 900;
  font-style: normal;
}

@font-face {
  font-family: 'Rawline';
  src: url('fonts/rawline-900i.ttf') format('truetype');
  font-weight: 900;
  font-style: italic;
}

:root {
  --main-color: #ffffff;
  --second-color: #f8ede3;
  --third-color: #daaa3e;
  --forth-color: #901c1f;
  --text-color: #202020;
  --padding-top: 2em;
}
html {
  font-family:Rawline, sans-serif;
  font-size: thin;
  scrollbar-color: var(--third-color) var(--main-color);
  scrollbar-width: thin;
}
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
p, h2, a, li {
  color: var(--text-color);
  font-weight:300;
  line-height: 1.5;
}
h2 {
  font-size: 25px;
}
h3 {
  font-size: 20px;
  font-weight:300;
}
p, a, li {
  font-size: 15px;
}
body {
  background-color: var(--main-color);
}
.container {
  display: flex;
  flex-direction: column;
  text-align: center;
  width: 100%;
  margin: 0 auto;
  padding: 1em;
}
.pair-containers{
  padding: 20px 1em;
  display: flex;
  flex-direction: column;
}
.enter-div {
  display: flex;
  flex-direction: row;
  height: 100vh;
  overflow: hidden;
}
.text-side {
  background:transparent;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: end;
  padding: 3.5em;
  position: relative;
}
.video-side {
  height: inherit;
  width: we;
  flex: 1;
  position: absolute;
  z-index: -1;
}
.video-side video {
  object-position:top center;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.enter-div-caption {
  display: block;
  margin: 1em 0px;
}
.slogan-section {
  min-height: 20em;
  display: flex;
  flex-direction: column;
  justify-content:space-between;
  align-items: center;
  text-align: center;
}
.slogan-text {
  display: none;
  font-family: serif;
  font-size: 2em;
  color: var(--third-color);
  font-weight: 700;
}

header {
  background:transparent;
  text-align: center;
  width: 100%;
  height: 4em;
  position: fixed;
  padding:0 10em;
  z-index: 1;
  transition: transform 0.3s ease-in-out,background-color 0.3s ease;
}
header.hidden {
  transform: translateY(-100%);
}
header.scrolled {

  background-color: var(--main-color);
}
.header-logo {
  padding: 1em;
  display: flex;
  justify-content: center;
  height: inherit;
  align-items:center;
  gap:2em
}
.btn-contact-us {
  background-color: var(--third-color);
  color: #fff;
  padding: 0.75em 1.5em;
  border-radius: 30px;
  text-decoration: none;
  font-size: 1em;
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
  transition: background-color 0.3s ease;
}
.side-menu__button {
  position: absolute;
  right: 0;
  border: none;
  width: 5em;
  height: 100%;
  background: transparent;
  border-radius: 50% 0% 0% 50%;
}
.full-menu {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-color: var(--third-color);
  color: white;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1000;
  opacity: 0;
  pointer-events: none;
  transition: opacity 0.4s ease;
}

.full-menu ul {
  list-style: none;
  text-align: center;
  padding: 0;
}

.full-menu li {
  margin: 1em 0;
}

.full-menu a {
  color: white;
  font-size: 1.5em;
  text-decoration: none;
  transition: color 0.3s ease;
}

.full-menu a:hover {
  color: var(--dark-gold);
}

.full-menu.active {
  opacity: 1;
  pointer-events: auto;
}
.menu-close {
  position: absolute;
  top: 2em;
  right: 1em;
  font-size: 2em;
  color: white;
  background: none;
  border: none;
  cursor: pointer;
  z-index: 1001;
  transition: color 0.3s ease;
}

.menu-close:hover {
  color: var(--dark-gold);
}
.nav-menu {
  display: none;
  width: 100%;
  align-items:center;
}

.nav-menu ul {
  width: 100%;
  display: flex;
  justify-content: space-around;
  list-style: none;
  padding: 0;
}
.nav-menu a {
  text-decoration: none;
  transition: color 0.3s ease;
}

/* Кнопки */
.btn-record, .btn-whatsapp {
  display: none;
}

.about {
  /* padding: 20px; */
  /* width: 40%; */
  text-align: center;
}
.about h2 {
  margin-bottom: 20px;
}

.about p {
  padding: 0px 1em;
  max-width: 800px;
  margin: 0 auto;
}
.advantages {
  /* background-color: var(--second-color); */
  /* border-radius:1em; */
  padding: var(--padding-top) 0px;
  text-align: center;
}

.advantages h2 {
  color: var(--text-color);
  margin-bottom: 30px;
}

.advent-list {
  list-style: none;
  padding: 0;
  margin: 0 auto;
  max-width: 700px;
  text-align: left;
}

.advent-list li {
  color: var(--text-color);
  margin-bottom: 15px;
  position: relative;
  display: flex;
  line-height: 1.5em;
}
.services {
  color: var(--dark-gold);
  padding: var(--padding-top) 1em;
  text-align: center;
}

.services h2 {
  color: var(--dark-gold);
  margin-bottom: 30px;
}
.service-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
  gap: 1em;
}
.service-slider {
  scrollbar-color: var(--third-color) var(--second-color);
  display: flex;
  overflow-x: auto;
  scroll-snap-type: x mandatory;
  gap: 1rem;
  padding-bottom: 1rem;
}
/* ... */

